--- a/Pipfile
+++ b/Pipfile
@@ -8,6 +8,8 @@ verify_ssl = true
 [packages]
 fastapi = "*"
 uvicorn = "*"
+mongoengine-goodjson = "*"
+mongoengine = "*"
 
 [requires]
 python_version = "3.8"
